Started implementing portal with angularJS Added online experiments (needs testing)
