# com.recalot.common/src/com/recalot/common/interfaces/model/rec/RecommenderAccess.java
@@ -20,6 +20,7 @@ package com.recalot.common.interfaces.model.rec;
 import com.recalot.common.builder.RecommenderBuilder;
 import com.recalot.common.communication.DataSet;
 import com.recalot.common.communication.Message;
+import com.recalot.common.communication.RecommendationResult;
 import com.recalot.common.exceptions.BaseException;
 import com.recalot.common.communication.Service;
 import com.recalot.common.interfaces.model.data.DataSource;
@@ -34,6 +35,8 @@ public interface RecommenderAccess extends Service {
     public Recommender getRecommender(String id) throws BaseException;
     public RecommenderBuilder getRecommenderBuilder(String id) throws BaseException;
     public Recommender createRecommender(DataSource dataSource, Map<String, String> param) throws BaseException;
+    public Recommender createRecommender(DataSource dataSource, String configPrefix, Map<String, String> param) throws BaseException;
     public Recommender updateRecommender(String id, DataSource dataSource, Map<String, String> param) throws BaseException;
     public Message deleteRecommender(String id);
+
 }
